src/objects/YS2__Yousign_Submitted_Document__c.object
<CustomObject>
    <fields>
        <fullName>YS2__Document_Id__c</fullName>
        <label>Document Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS2__Document_URL__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + YS2__Document_Id__c  , &apos;Get file&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS2__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YS2__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YS2__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YS2__Yousign_Document_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Yousign Document Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>YS2__Yousign_Procedure__c</fullName>
        <label>Yousign Procedure</label>
        <referenceTo>YS2__Yousign_Procedure__c</referenceTo>
        <relationshipName>Yousign_Subitted_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Yousign Submitted Document</label>
    <nameField>
        <displayFormat>YSD-{00000}</displayFormat>
        <label>Yousign Submitted Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yousign Submitted Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>